<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_20sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/less_round_edge_ractengle_white"
        android:elevation="@dimen/_3sdp"
        android:paddingTop="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:text="@string/add_a_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="@dimen/_6sdp"
            android:id="@+id/tvSuggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:text="@string/eg_rising_wolf_good_idea"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:textStyle="normal" />



        <EditText
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center_vertical|start"
            android:inputType="textCapSentences"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="0dp"
            android:hint="@string/enter_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />



        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvNegative"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_36sdp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/cancel_"
                android:textAllCaps="true"
                android:textColor="@color/appColor"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />


            <TextView
                android:layout_marginStart="@dimen/_15sdp"
                android:id="@+id/tvSetTitle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_36sdp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/set_title"
                android:textAllCaps="true"
                android:textColor="@color/appColor"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>